# Research_Agent

./: .env.example  .gitignore  BOOTSTRAP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  example.py  pyproject.toml  validate_bootstrap.sh  verify_workers.py
docs/: STATE_PERSISTENCE.md
examples/: run_research_graph.py  state_persistence_example.py
propaganda_extension/: .editorconfig  .gitignore  .prettierignore  IMPLEMENTATION_NOTES.md  README.md  docker-compose.yml
propaganda_extension/backend/: .env.example  README.md  pyproject.toml
propaganda_extension/backend/app/: main.py  settings.py
propaganda_extension/extension/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
propaganda_extension/extension/public/: manifest.json
propaganda_extension/extension/src/: App.tsx  background.ts  content.ts  styles.css  types.ts  youtube-transcript.ts
src/research_agent/: __init__.py  api.py  cli.py  config.py  dependencies.py  exceptions.py  graph.py  hitl.py  logging_config.py  state_utils.py
src/research_agent/clients/: content_processor.py  search.py  worker_manager.py
src/research_agent/llm/: __init__.py  gemini.py
src/research_agent/models/: __init__.py  requests.py  responses.py  state.py
src/research_agent/nodes/: __init__.py  manager.py  planner.py  publisher.py  reviewer.py  worker.py  writer.py
src/research_agent/persistence/: __init__.py  base.py  sqlite.py
tests/: __init__.py  test_config.py  test_graph.py  test_hitl.py  test_persistence.py  test_reducers.py  test_state.py  test_state_utils.py  test_workers.py  test_writer_reviewer_publisher.py
