[project]
name = "research-agent"
version = "0.1.0"
description = "Production-ready deep research agent using LangGraph and multi-LLM orchestration"
readme = "README.md"
authors = [
    { name = "cto-new[bot]", email = "140088366+cto-new[bot]@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    # LangGraph for agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    
    # LLM providers
    "google-generativeai>=0.8.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    
    # Search and tools
    "tavily-python>=0.5.0",
    
    # Web framework and CLI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer[all]>=0.12.0",
    
    # Storage backends
    "redis>=5.2.0",
    "aiosqlite>=0.20.0",
    
    # Data validation and settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # HTTP client and utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    
    # Content processing
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # Logging and output
    "rich>=13.9.0",
    "structlog>=24.4.0",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
]

[project.scripts]
research-agent = "research_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "tavily.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=research_agent --cov-report=term-missing"
