[project]
name = "propaganda-extension-backend"
version = "0.0.1"
description = "FastAPI backend for the Propaganda Extension"
readme = "README.md"
authors = [
  { name = "cto.new" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.2.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
  "E501", # line too long (handled by black)
  "B008"  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
